<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.OverviewFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/distance_small">

        <TextView
            android:id="@+id/txvName"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <include layout="@layout/layout_divider" />

        <TextView
            android:id="@+id/txvCurrMeal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txvCurrMeal_Text"/>

        <EditText
            android:id="@+id/edtCurrMeal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <include layout="@layout/layout_divider" />
        <TextView
            android:id="@+id/txvCurrPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txvCurrPrize_Text"/>

        <EditText
            android:id="@+id/edtCurrPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>
        <include layout="@layout/layout_divider" />
        <Button
            android:id="@+id/btnSaveMenuAndPrice"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/btnSaveMenuAndPrice_Text"/>
        <include layout="@layout/layout_divider" />

        <LinearLayout
            android:id="@+id/lnlReviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </LinearLayout>


</FrameLayout>